Unified: Do not show close button on a pinned notification.

When a notification is PINNED type, the close button should only appear
when it's a popup, but not in the message center.
Messages in unified notification center are once created based on the
Notification and then marked as nested. The latter change affects
condition for show/hide close button. However the button visibility
was not updated reflecting it.

Bug: 872238
Change-Id: Ie0718578153f47e35673b3566fb51933075488be
Reviewed-on: https://chromium-review.googlesource.com/c/1299095
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#603726}
Former-commit-id: f6fb62b11fe930c3d9de7c9611f9ff2ae77c7a08